--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-toastify": "^11.0.5",
+    "toastify-react-native": "^7.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
